--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Hide NBA scores",
+    "name": "隐藏腾讯NBA比分",
     "version": "0.0.1",
     "manifest_version": 3,
-    "description": "An extension to hide tencent nba scores.",
+    "description": "隐藏腾讯NBA多个页面的比分",
     "icons": {
         "16": "icons/hide16x16.png",
         "32": "icons/hide32x32.png",
